[gd_scene load_steps=10 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Player Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actor.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.gd" type="Script" id=4]
[ext_resource path="res://InanimcateObject.gd" type="Script" id=5]
[ext_resource path="res://Crosshair.png" type="Texture" id=6]

[sub_resource type="PlaneMesh" id=1]
lightmap_size_hint = Vector2( 32, 32 )
size = Vector2( 64, 64 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.320313, 0.222463, 0.157654, 1 )
roughness = 0.5

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( 32, 0, 32, -32, 0, 32, 32, 0, -32, -32, 0, -32 )

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="Obstacles" type="Node" parent="."]

[node name="The Ground" type="MeshInstance" parent="Obstacles"]
use_in_baked_light = true
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Obstacles/The Ground"]
script = ExtResource( 5 )
role = "The Ground"

[node name="CollisionShape" type="CollisionShape" parent="Obstacles/The Ground/StaticBody"]
shape = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.9034, 0.355803, -0.239315, 0, 0.558108, 0.829769, 0.428798, -0.749613, 0.504195, 0, 7.13813, 0 )
shadow_enabled = true
directional_shadow_max_distance = 200.0

[node name="Camera" parent="." instance=ExtResource( 2 )]

[node name="Actors" type="Node" parent="."]

[node name="Citizen" parent="Actors" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.2816, 0, -21.6991 )
ranks = {
"Crime": 2,
"Law": 2,
"Politics": 2
}

[node name="Police Recruit" parent="Actors" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.1149, 0, 15.0545 )
role = "Police Recruit"
ranks = {
"Crime": 0,
"Law": 5,
"Politics": 2
}

[node name="Volunteer" parent="Actors" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.6178, 0, 15.4921 )
role = "Volunteer"
ranks = {
"Crime": 0,
"Law": 2,
"Politics": 4
}

[node name="Petty Criminal" parent="Actors" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.488214, 0, -6.67676 )
role = "Petty Criminal"
ranks = {
"Crime": 4,
"Law": 0,
"Politics": 3
}

[node name="Police Chief" parent="Actors" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24.8893, 0, -4.0515 )
role = "Police Chief"
ranks = {
"Crime": 0,
"Law": 10,
"Politics": 7
}

[node name="Mayor" parent="Actors" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.5341, 0, -23.0117 )
role = "Mayor"
ranks = {
"Crime": 5,
"Law": 5,
"Politics": 10
}

[node name="HUD" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Role" type="Panel" parent="HUD"]
margin_left = 760.0
margin_top = 17.0
margin_right = 1003.0
margin_bottom = 57.0

[node name="Role" type="Label" parent="HUD/Role"]
margin_left = 19.0
margin_top = 15.0
margin_right = 59.0
margin_bottom = 29.0
text = "Role:"

[node name="RoleLabel" type="Label" parent="HUD/Role"]
margin_left = 80.0
margin_top = 14.0
margin_right = 222.0
margin_bottom = 28.0
text = "Citizen"
align = 2

[node name="Rank" type="Panel" parent="HUD"]
margin_left = 23.0
margin_top = 17.0
margin_right = 266.0
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rank" type="Label" parent="HUD/Rank"]
margin_left = 19.0
margin_top = 15.0
margin_right = 59.0
margin_bottom = 29.0
text = "Rank:"

[node name="RankLabel" type="Label" parent="HUD/Rank"]
margin_left = 80.0
margin_top = 13.0
margin_right = 222.0
margin_bottom = 27.0
text = "0 / 0 / 0"
align = 2

[node name="ViewportContainer" type="ViewportContainer" parent="HUD"]
margin_left = 25.0
margin_top = 73.0
margin_right = 266.0
margin_bottom = 222.0
size_flags_horizontal = 2
size_flags_vertical = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="HUD/ViewportContainer"]
size = Vector2( 241, 149 )
handle_input_locally = false
msaa = 1
render_target_clear_mode = 1
render_target_update_mode = 3

[node name="Camera2" type="Camera" parent="HUD/ViewportContainer/Viewport"]
transform = Transform( 0.849904, 0.312841, -0.42402, 0, 0.804689, 0.593697, 0.526937, -0.504585, 0.683908, -15.1667, 21.2541, 30.6634 )
current = true

[node name="Player Velocity" type="Panel" parent="HUD"]
margin_left = 27.0
margin_top = 233.0
margin_right = 266.0
margin_bottom = 273.0

[node name="Label" type="Label" parent="HUD/Player Velocity"]
margin_left = 12.0
margin_top = 8.0
margin_right = 229.0
margin_bottom = 33.0

[node name="Target" type="Panel" parent="HUD"]
margin_left = 849.0
margin_top = 205.0
margin_right = 998.0
margin_bottom = 432.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Role" type="Label" parent="HUD/Target"]
margin_left = 19.0
margin_top = 18.0
margin_right = 131.0
margin_bottom = 42.0
size_flags_horizontal = 0
text = "Citizen"
align = 1
valign = 1

[node name="Options" type="ScrollContainer" parent="HUD/Target"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 60.0
margin_right = -16.0
margin_bottom = 175.0
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpContainer" type="VBoxContainer" parent="HUD/Target/Options"]
margin_right = 117.0
margin_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Swap Roles" type="Button" parent="HUD/Target/Options/OpContainer"]
margin_right = 117.0
margin_bottom = 20.0
focus_next = NodePath("../Swap Ranks")
focus_previous = NodePath("../Change Rules")
text = "Swap Roles"

[node name="Swap Ranks" type="Button" parent="HUD/Target/Options/OpContainer"]
margin_top = 24.0
margin_right = 117.0
margin_bottom = 44.0
focus_next = NodePath("../Change Rules")
focus_previous = NodePath("../Swap Roles")
text = "Swap Ranks"

[node name="Change Rules" type="Button" parent="HUD/Target/Options/OpContainer"]
margin_top = 48.0
margin_right = 117.0
margin_bottom = 68.0
focus_next = NodePath("../Swap Roles")
focus_previous = NodePath("../Swap Ranks")
text = "Change Rules"

[node name="Rank" type="Label" parent="HUD/Target"]
margin_left = 20.0
margin_top = 187.0
margin_right = 130.0
margin_bottom = 211.0
text = "0 / 0 / 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="swap_ranks" from="HUD" to="." method="swap_ranks"]
[connection signal="swap_roles" from="HUD" to="." method="swap_roles"]
[connection signal="pressed" from="HUD/Target/Options/OpContainer/Swap Roles" to="HUD" method="swap_roles"]
[connection signal="pressed" from="HUD/Target/Options/OpContainer/Swap Ranks" to="HUD" method="swap_ranks"]
[connection signal="pressed" from="HUD/Target/Options/OpContainer/Change Rules" to="HUD" method="change_rules"]
